[package]
name = "hyper-rustls"
version = "0.21.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/ctz/hyper-rustls"
repository = "https://github.com/ctz/hyper-rustls"

[dependencies]
bytes = "0.5"
log = "0.4.4"
ct-logs = { version = "^0.7", optional = true }
futures-util = "0.3.1"
hyper = { version = "0.13.0", default-features = false }
rustls = { git = "https://github.com/ctz/rustls", rev = "fee894f7e030" }
rustls-native-certs = { git = "https://github.com/kwantam/rustls-native-certs", rev = "52fc75ad4430", optional = true }
tokio = "0.2.4"
tokio-rustls = { git = "https://github.com/kwantam/tokio-rustls", rev = "684cc546e754" }
webpki = "0.21.0"
webpki-roots = { version = "0.20", optional = true }

[dev-dependencies]
tokio = { version = "0.2", features = ["io-std", "macros", "dns", "stream"] }

[features]
default = ["native-tokio"]
webpki-tokio = ["tokio-runtime", "webpki-roots"]
native-tokio = ["tokio-runtime", "rustls-native-certs"]
tokio-runtime =  ["hyper/runtime", "ct-logs"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["tokio-runtime"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tokio-runtime"]
